# kde3-apps-dolphin

./: AUTHORS  CMakeLists.txt  ChangeLog  ConfigureChecks.cmake  README  TODO
po/: d3lphin.po  de.po  el.po  es.po  et.po  fr.po  he.po  it.po  pl.po  ru.po
src/: CMakeLists.txt  bookmarkselector.cpp  bookmarkselector.h  bookmarkssettingspage.cpp  bookmarkssettingspage.h  bookmarkssidebarpage.cpp  bookmarkssidebarpage.h  d3lphin.desktop  d3lphinui.rc  detailsviewsettingspage.cpp  detailsviewsettingspage.h  dolphin.cpp  dolphin.h  dolphincontextmenu.cpp  dolphincontextmenu.h  dolphindetailsview.cpp  dolphindetailsview.h  dolphindetailsviewsettings.cpp  dolphindetailsviewsettings.h  dolphindirlister.cpp  dolphindirlister.h  dolphiniconsview.cpp  dolphiniconsview.h  dolphiniconsviewsettings.cpp  dolphiniconsviewsettings.h  dolphinsettings.cpp  dolphinsettings.h  dolphinsettingsbase.cpp  dolphinsettingsbase.h  dolphinsettingsdialog.cpp  dolphinsettingsdialog.h  dolphinstatusbar.cpp  dolphinstatusbar.h  dolphinview.cpp  dolphinview.h  editbookmarkdialog.cpp  editbookmarkdialog.h  filterbar.cpp  filterbar.h  generalsettingspage.cpp  (+40 more)
src/pics/: CMakeLists.txt
src/pics/128x128/: CMakeLists.txt
src/pics/16x16/: CMakeLists.txt
src/pics/22x22/: CMakeLists.txt
src/pics/32x32/: CMakeLists.txt
src/pics/48x48/: CMakeLists.txt
src/pics/64x64/: CMakeLists.txt
src/servicemenus/: CMakeLists.txt  Makefile.am.new  amarok_addaspodcast.desktop  amarok_append.desktop  ark_compress.desktop  ark_extract.desktop  ark_extract_subdir.desktop  compress.desktop  d3lphin_su.desktop  isoservice.desktop  kdesktopSetAsBackground.desktop  run_as_root.desktop  text-ada-print.desktop  text-c++-print.desktop  text-c++h-print.desktop  text-ch-print.desktop  text-css-print.desktop  text-diff-print.desktop  text-html-print.desktop  text-java-print.desktop  text-log-print.desktop  text-makefile-print.desktop  text-pas-print.desktop  text-perl-print.desktop  text-print.desktop  text-python-print.desktop  text-tcl-print.desktop  text-tex-print.desktop  text-xml-print.desktop  text-xslt-print.desktop
