#################################################
#
#  (C) 2010-2011 Serghei Amelian
#  serghei (DOT) amelian (AT) gmail.com
#
#  Improvements and feedback are welcome
#
#  This file is released under GPL >= 2
#
#################################################

install( FILES
    compress.desktop amarok_addaspodcast.desktop
    amarok_append.desktop amarok_play_audiocd.desktop
    ark_compress.desktop ark_extract.desktop
    ark_extract_subdir.desktop d3lphin_su.desktop
    edit_as_root.desktop encryptfile.desktop
    encryptfolder.desktop floppy_format.desktop
    imageconverter.desktop installfont.desktop
    jpegorient.desktop k3b_audiocd_rip.desktop
    k3b_cd_copy.desktop k3b_create_audio_cd.desktop
    k3b_create_video_cd.desktop k3b_dvd_copy.desktop
    k3b_handle_empty_cd.desktop k3b_handle_empty_dvd.desktop
    k3b_videodvd_rip.desktop k3b_write_bin_image.desktop
    k3b_write_iso_image.desktop kdesktopSetAsBackground.desktop
    konqgwenview.desktop konsolehere.desktop
    mail_as_attachment.desktop media_eject.desktop
    media_mount.desktop media_realfolder.desktop
    media_safelyremove.desktop media_unmount.desktop
    open_in_digikam.desktop run_as_root.desktop smb2rdc.desktop
    text-ada-print.desktop text-c++-print.desktop
    text-c++h-print.desktop text-ch-print.desktop
    text-css-print.desktop text-diff-print.desktop
    text-html-print.desktop text-java-print.desktop
    text-log-print.desktop text-makefile-print.desktop
    text-pas-print.desktop text-perl-print.desktop
    text-print.desktop text-python-print.desktop
    text-tcl-print.desktop text-tex-print.desktop
    text-xml-print.desktop text-xslt-print.desktop
  DESTINATION ${DATA_INSTALL_DIR}/d3lphin/servicemenus )
