#################################################
#
#  (C) 2010-2011 Serghei Amelian
#  serghei (DOT) amelian (AT) gmail.com
#
#  Improvements and feedback are welcome
#
#  This file is released under GPL >= 2
#
#################################################

install( FILES
    preview.png editurl.png
  DESTINATION ${DATA_INSTALL_DIR}/d3lphin/icons/hicolor/16x16/actions )
